contact.css
@font-face {
    font-family: 'Ailerons';
    src: url('fonts/ailerons.woff2') format('woff2'),
         url('fonts/ailerons.woff') format('woff'),
         url('fonts/ailerons.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'Copperplate';
    src: url("fonts/copperplate.otf") format("opentype"); 
}



html, body{
    background-color: rgb(11,20,27);
    /* width: 100%; */
    min-height: 100%;
    margin: 0;
    /* border: solid red 1px; */
}

#contents{
    padding-top: 5vh;
    height: auto%;
    width: 100%;
    /* border: solid white 1px; */
    display: flex;
    flex-direction: row-reverse
}

#info{
    margin-right: 48%;
    margin-top: 10vh;
    color: white;   
    margin-left: 5vw;
    width: 19rem;
    /* border: solid white 1px; */
}

.icons{
    /* border: solid green 1px; */
}

.details{
    display: flex;
    align-content: center;
    align-items: center;
    cursor: pointer;
    margin-top: 1rem;
    margin-bottom: 1rem;

    animation: appear;
    animation-duration: 1.5s;
    z-index: 9999;
}

@keyframes appear {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}


.details:hover{
    text-shadow: 0px -2px 0px #000000, 0 0 5px rgba(255, 255, 255, 0.8), 0 -4px 15px rgba(255, 255, 255, 0.5);
}

.icons{
    height: 2rem;
}

.denali{
    padding-left: 2.5rem;
    color: white;
    font-family: 'Ailerons', Arial, Helvetica, sans-serif;
    font-size: 2em;
    animation: reveal;
    animation-duration: 1.5s;
}

@keyframes reveal {
    from {
        opacity: 0;
        padding-left: 0rem;
    }
    to {
        opacity: 1;
        padding-left: 2.5rem;
    }
}

#contact{
    font-family: "Copperplate", Arial, Helvetica, sans-serif;
}

.contactinfo{
    padding-left: .5rem;
    text-decoration: none;
    color: white;
}

#A{
    color: #BD8D2D;
}

#triangle{
    position: absolute;
    width: 45rem;
    height: 45rem;
    top: 7rem;
    left: 47%;
    margin: auto;

}

#triangle2{
    position: absolute;
    width: 43rem;
    height: 43rem;
    top: 9rem;
    left: 50%;
    margin: auto;
    animation: triangulation;
    animation-duration: 1.5s;
}


@keyframes triangulation {
    from {
        top: 7rem;
        left: 47%;
        width: 45rem;
        height: 45rem;
    }
    to {
        top: 9rem;
        left: 50%;
        width: 43rem;
        height: 43rem;
    }
}

#mail{
    /* border: solid white 1px; */
    padding-right: 0.2rem;
    margin-left: 0.2rem;
    margin-top: 0;
    margin-bottom: 0;
}


@media(max-width:480px){
	#info{
        position: absolute;
        left: 0;
        right: 0;
    }

    #triangle{
        top: 20vh;
        /* bottom: 0; */
        left: 47%;
        margin: auto;
        /* position: absolute; */
         /* border: solid green 1px;  */
    }
    
    #triangle2{
        top: 21vh;
        left: 50%;
        margin: auto;
    
         animation: triangulation;
         animation-duration: 1.5s;
    }
}

